[package]
name = "learn_wgpu"
version = "0.1.0"
authors = ["Aevyrie Roessler <aevyrie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.24"
glam = "0.15"
env_logger = "0.8"
log = "0.4"
wgpu = "0.8"
futures = "0.3"
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = "1.0"
